[package]
name = "fuso-support"
version = "0.1.0"
authors = ["UINB Tech"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://fusotao.org"
repository = "https://github.com/uinb/fusotao"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-core = { version = '2.0.1', default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }